--- a/08chromeetension/index.css
+++ b/08chromeetension/index.css
@@ -28,3 +28,16 @@ button {
 h1 {
     color: #5f9341;
 }
+
+ul{
+    list-style: none;
+    padding: 0;
+}
+li{
+    margin-top: 5px;
+}
+
+a{
+
+    color: #5f9341;
+}
